--- a/content_builder/src/html/themes/felzec/light/OrganizationAboutModalComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationAboutModalComponent.html
@@ -23,13 +23,21 @@
    </head>
    <body>
        <div data-component-name="light_OrganizationAboutModalComponent" class="classes.blankBG">
-           <div class="classes.felzec_about_header" data-component-props="style={this.props.bg_style}"></div>
+            <div class="classes.felzec_about_header" data-component-props="style={this.props.bg_style}"></div>
             <div class="classes.felzec_about_container">
                 <div class="classes.felzec_about_container_inner">
                     <div class="classes.felzec_about_title">ABOUT US</div>
                     <div class="classes.felzec_about_text" data-component-value="{this.props.about_content}">text</div>
                 </div>
                 <div class="classes.felzec_about_container_lower"></div>
+            </div>
+            <div class="classes.felzec_staff_container">
+                <div class="classes.felzec_staff_container" data-component-props="style={this.props.staff_style}">
+                </div>
+                <div class="classes.felzec_staff_filter_container" data-component-props="style={this.props.filter_style}"></div>
+                <div class="classes.felzec_staff_inner_container">
+                    <div class="classes.felzec_coworker_container" data-component-value="{this.props.about_staff}">game</div>
+                </div>
             </div>
         </div>
    </body>
