--- a/content_builder/src/html/themes/felzec/light/OrganizationAboutModalComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationAboutModalComponent.html
@@ -29,7 +29,24 @@
                     <div class="classes.felzec_about_title">ABOUT US</div>
                     <div class="classes.felzec_about_text" data-component-value="{this.props.about_content}">text</div>
                 </div>
-                <div class="classes.felzec_about_container_lower"></div>
+                <div class="classes.felzec_about_container_lower">
+                    <div class="ui stackable two column grid">
+                        <div class="column">
+                            <div class="classes.felzec_lower_about_title">CONTACT US</div>
+                            <div class="classes.felzec_lower_about_text">If you want to contact us you can always send us an email</div>
+                        </div>
+                        <div class="column">
+                            <div class="classes.felzec_lower_email_button">
+                                <div class="classes.felzec_about_email_title">SUPPORT</div>
+                                <div class="classes.felzec_about_email_text" data-component-value="{this.props.about_support_email}">smith@gmail.com</div>
+                            </div>
+                            <div class="classes.felzec_lower_email_button">
+                                <div class="classes.felzec_about_email_title">MANAGEMENT</div>
+                                <div class="classes.felzec_about_email_text" data-component-value="{this.props.about_business_email}">smith_gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="classes.felzec_staff_container">
                 <div class="classes.felzec_staff_container" data-component-props="style={this.props.staff_style}">
