--- a/content_builder/src/html/themes/admin/OrganizationAdminPageComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminPageComponent.html
@@ -41,6 +41,7 @@
                     </div>
                 </div>
             </div>
+            <div class="classes.admin_navigate_button" data-component-props="onClick={this.props.handleNavClick}">Navigate To Your Site</div>
         </div>
    </body>
    <script>
