--- a/content_builder/src/html/themes/admin/OrganizationAdminProfileComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminProfileComponent.html
@@ -94,6 +94,21 @@
                     </div>
                 </div>
             </div>
+            <div class="classes.admin_title_box">
+                <h2>Contact Emails</h2>
+            </div>
+            <div class="classes.admin_social_box">
+                <div class="classes.admin_social_box_inner">
+                    <div class="ui fluid input">
+                        <input data-component-props="value={this.props.support_email_value} onChange={(e)=>{this.props.handleChange('support_email_value', e);}}"  type="text" placeholder="Support Email">
+                    </div>
+                </div>
+                <div class="classes.admin_social_box_inner">
+                    <div class="ui fluid input">
+                        <input data-component-props="value={this.props.business_email_value} onChange={(e)=>{this.props.handleChange('business_email_value', e);}}"  type="text" placeholder="Business Email">
+                    </div>
+                </div>
+            </div>
             <div class="classes.admin_submit_box">
                 <div data-component-props="onClick={this.props.handleSubmit}" class="classes.admin_submit_button">Submit</div>
             </div>
