fixed bugs in footer with news item click and added mailto for email click

--- a/content_builder/src/html/themes/felzec/light/OrganizationFooterComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationFooterComponent.html
@@ -33,20 +33,20 @@
                         <div class="ui stackable two column grid">
                             <div class="column">
                                 <div class="classes.felzec_footer_title_left">Support</div>
-                                <div class="classes.felzec_footer_email_left" data-component-value="{this.props.footer_support}">
+                                <div class="classes.felzec_footer_email_left" data-component-props="onClick={this.props.handleSupportClick}" data-component-value="{this.props.footer_support}">
                                     support email
                                 </div>
                             </div>
                             <div class="column">
                                 <div class="classes.felzec_footer_title_right">Business enquiries</div>
-                                <div class="classes.felzec_footer_text_right" data-component-value="{this.props.footer_business}">
+                                <div class="classes.felzec_footer_email_right" data-component-props="onClick={this.props.handleBusinessClick}" data-component-value="{this.props.footer_business}">
                                     support email
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="five wide column">
+                <div class="five wide column" style="padding:0px">
                     <div class="classes.felzec_footer_title_left">Latest Posts</div>
                     <div data-component-value={this.props.blog_items}>blog intems</div>
                 </div>
