added email functionality to about modal

--- a/content_builder/src/html/themes/felzec/light/OrganizationAboutModalComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationAboutModalComponent.html
@@ -38,11 +38,11 @@
                         <div class="column">
                             <div class="classes.felzec_lower_email_button">
                                 <div class="classes.felzec_about_email_title">SUPPORT</div>
-                                <div class="classes.felzec_about_email_text" data-component-value="{this.props.about_support_email}">smith@gmail.com</div>
+                                <div class="classes.felzec_about_email_text" data-component-props="onClick={this.props.handleSupportClick}" data-component-value="{this.props.about_support_email}">smith@gmail.com</div>
                             </div>
                             <div class="classes.felzec_lower_email_button">
                                 <div class="classes.felzec_about_email_title">MANAGEMENT</div>
-                                <div class="classes.felzec_about_email_text" data-component-value="{this.props.about_business_email}">smith_gmail.com</div>
+                                <div class="classes.felzec_about_email_text" data-component-props="onClick={this.props.handleBusinessClick}" data-component-value="{this.props.about_business_email}">smith_gmail.com</div>
                             </div>
                         </div>
                     </div>
