fix social icons bug for enigma and obliviot

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationRosterItemComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationRosterItemComponent.html
@@ -41,10 +41,10 @@
                                 <span data-component-value="{this.props.roster_about}" class="classes.dark_roster_about_text">Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years.</span>
                             </div>
                             <div class="classes.roster_item_social_container">
-                                <div data-component-props="onClick={()=>{this.props.handle_social('twitter', this.props.ind_user)}} style={this.props.twitter_style}" class="classes.dark_roster_item_social_icon"><i class="fa fa-twitter"></i></div>
-                                <div data-component-props="onClick={()=>{this.props.handle_social('facebook', this.props.ind_user)}} style={this.props.facebook_style}" class="classes.dark_roster_item_social_icon"><i class="fa fa-facebook"></i></div>
-                                <div data-component-props="onClick={()=>{this.props.handle_social('instagram', this.props.ind_user)}} style={this.props.instagram_style}" class="classes.dark_roster_item_social_icon"><i class="fa fa-instagram"></i></div>
-                                <div data-component-props="onClick={()=>{this.props.handle_social('youtube', this.props.ind_user)}} style={this.props.youtube_style}" class="classes.dark_roster_item_social_icon"><i class="fa fa-youtube"></i></div>
+                                <div data-component-props="onClick={()=>{this.props.handle_social('twitter', this.props.ind_user)}} style={this.props.twitter_style}" class="classes.dark_roster_item_social_icon"><i class="fab fa-twitter"></i></div>
+                                <div data-component-props="onClick={()=>{this.props.handle_social('facebook', this.props.ind_user)}} style={this.props.facebook_style}" class="classes.dark_roster_item_social_icon"><i class="fab fa-facebook"></i></div>
+                                <div data-component-props="onClick={()=>{this.props.handle_social('instagram', this.props.ind_user)}} style={this.props.instagram_style}" class="classes.dark_roster_item_social_icon"><i class="fab fa-instagram"></i></div>
+                                <div data-component-props="onClick={()=>{this.props.handle_social('youtube', this.props.ind_user)}} style={this.props.youtube_style}" class="classes.dark_roster_item_social_icon"><i class="fab fa-youtube"></i></div>
                             </div>
                         </div>
                     </div>
