--- a/content_builder/src/html/themes/felzec/light/OrganizationTeamComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationTeamComponent.html
@@ -21,7 +21,7 @@
       </script>    
    </head>
    <body>
-        <div data-component-name="light_OrganizationTeamComponent"  class="classes.felzec_team_container">
+        <div data-component-name="light_OrganizationTeamComponent"  class="classes.felzec_team_main_container">
             <div class="classes.felzec_team_container" data-component-props="style={this.props.bg_style}">
             </div>
             <div class="classes.felzec_team_filter_container" data-component-props="style={this.props.filter_style}"></div>
