add staff title to about

--- a/content_builder/src/html/themes/felzec/light/OrganizationAboutModalComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationAboutModalComponent.html
@@ -53,6 +53,7 @@
                 </div>
                 <div class="classes.felzec_staff_filter_container" data-component-props="style={this.props.filter_style}"></div>
                 <div class="classes.felzec_staff_inner_container">
+                    <div class="classes.felzec_staff_title">STAFF</div>
                     <div class="classes.felzec_coworker_container" data-component-value="{this.props.about_staff}">game</div>
                 </div>
             </div>
