--- a/content_builder/src/html/themes/felzec/light/OrganizationFooterComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationFooterComponent.html
@@ -30,6 +30,22 @@
                         <div class="classes.felzec_footer_text_left" data-component-value="{this.props.footer_about}">
                             about
                         </div>
+                        <div class="classes.felzec_footer_sponsor_container">
+                            <div class="ui stackable four column grid">
+                                <div class=column>
+                                    <img class="classes.felzec_footer_sponsor_image" data-component-props="src={this.props.sponsor_image_1}" />
+                                </div>
+                                <div class=column>
+                                    <img class="classes.felzec_footer_sponsor_image" data-component-props="src={this.props.sponsor_image_2}" />
+                                </div>
+                                <div class=column>
+                                    <img class="classes.felzec_footer_sponsor_image" data-component-props="src={this.props.sponsor_image_3}" />
+                                </div>
+                                <div class=column>
+                                    <img class="classes.felzec_footer_sponsor_image" data-component-props="src={this.props.sponsor_image_4}" />
+                                </div>
+                            </div>
+                        </div>
                         <div class="ui stackable two column grid">
                             <div class="column">
                                 <div class="classes.felzec_footer_title_left">Support</div>
