reduced white space in roster and hooked up user defined color for hover over buttons

--- a/content_builder/src/html/themes/felzec/light/OrganizationTeamImageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationTeamImageComponent.html
@@ -26,7 +26,7 @@
             <div class="classes.felzec_team_overlay" data-component-props="style={this.props.felzec_overlay_style} onMouseOver={()=>{this.props.handleImageClick(this.props.felzec_overlay_style)}} onMouseOut={()=>{this.props.handleImageUnClick(this.props.felzec_overlay_style)}}">
                 <div class="classes.felzec_team_overlay_name" data-component-value="{this.props.felzec_team_name}">John Doe</div>
                 <div class="classes.felzec_team_overlay_handle" data-component-value="{this.props.felzec_team_handle}">undertaker</div>
-                <div class="classes.felzec_team_overlay_button" data-component-props="key={this.props.individual_id} onClick={()=>{this.props.handleIndividualClick(this.props.individual_id)}}">PROFILE</div>
+                <div class="classes.felzec_team_overlay_button" data-component-props="style={this.props.felzec_button_style} key={this.props.individual_id} onClick={()=>{this.props.handleIndividualClick(this.props.individual_id)}}">PROFILE</div>
             </div>
         </div>
    </body>
