OR-816 blog overlay same as media

--- a/content_builder/src/html/themes/felzec/light/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationBlogComponent.html
@@ -24,6 +24,7 @@
         <div data-component-name="light_OrganizationBlogComponent" class="classes.felzec_lightBlogContainer">
             <div class="classes.felzec_blog_container" data-component-props="style={this.props.bg_style}">
             </div>
+            <div class="classes.felzec_blog_filter_container" data-component-props="style={this.props.filter_style}"></div>
             <div class="classes.felzec_blog_inner_container">
                 <div class="ui stackable three column grid">
                     <div class="column">
