OR-826 deal with not present social links

--- a/content_builder/src/html/themes/felzec/light/OrganizationMobileMenuComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationMobileMenuComponent.html
@@ -39,7 +39,7 @@
                             </a>
                 </div>
                 <div class="classes.light_mobile_menu_item">
-                        <a class="classes.light_mobile_menu_item_box" data-component-props="onClick={this.props.handleBlogClick}">
+                        <a class="classes.light_mobile_menu_item_box" data-component-props="onClick={this.props.handleViewBlogClick}">
                                 Blog
                             </a>
                 </div>
@@ -48,17 +48,17 @@
                                 Login
                             </a>
                 </div>
-                <div class="classes.light_mobile_menu_item">
+                <div class="classes.light_mobile_menu_item" data-component-props="style={this.props.facebook_style}">
                         <a class="classes.light_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('fb');}}">
                                 Facebook
                             </a>
                 </div>
-                <div class="classes.light_mobile_menu_item">
+                <div class="classes.light_mobile_menu_item" data-component-props="style={this.props.twiiter_style}">
                         <a class="classes.light_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('twitter');}}">
                                 Twitter
                             </a>
                 </div>
-                <div class="classes.light_mobile_menu_item">
+                <div class="classes.light_mobile_menu_item" data-component-props="style={this.props.youtube_style}">
                         <a class="classes.light_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('youtube');}}">
                                 Youtube
                             </a>
