--- a/content_builder/src/html/themes/enigma/light/OrganizationMobileMenuComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationMobileMenuComponent.html
@@ -39,29 +39,29 @@
                             </a>
                 </div>
                 <div class="classes.obliviot_mobile_menu_item">
-                        <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={this.props.handleViewBlogClick}">
+                        <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={this.props.handleBlogClick}">
                                 Blog
-                                </a>
+                            </a>
                 </div>
                 <div class="classes.obliviot_mobile_menu_item">
                         <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={this.props.handleLoginClick}">
                                 Login
-                                </a>
+                            </a>
                 </div>
-                <div class="classes.obliviot_mobile_menu_item" data-component-props="style={this.props.facebook_style}">
+                <div class="classes.obliviot_mobile_menu_item">
                         <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('fb');}}">
                                 Facebook
-                                </a>
+                            </a>
                 </div>
-                <div class="classes.obliviot_mobile_menu_item" data-component-props="style={this.props.twiiter_style}">
+                <div class="classes.obliviot_mobile_menu_item">
                         <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('twitter');}}">
                                 Twitter
-                                </a>
+                            </a>
                 </div>
-                <div class="classes.obliviot_mobile_menu_item" data-component-props="style={this.props.youtube_style}">
+                <div class="classes.obliviot_mobile_menu_item">
                         <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('youtube');}}">
                                 Youtube
-                                </a>
+                            </a>
                 </div>
                 <div class="classes.obliviot_mobile_menu_item">
                         <div class="classes.obliviot_mobile_menu_item_box">
