--- a/content_builder/src/html/themes/felzec/light/OrganizationMobileMenuComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationMobileMenuComponent.html
@@ -39,7 +39,7 @@
                             </a>
                 </div>
                 <div class="classes.light_mobile_menu_item">
-                        <a class="classes.light_mobile_menu_item_box" data-component-props="onClick={this.props.handleViewBlogClick}">
+                        <a class="classes.light_mobile_menu_item_box" data-component-props="onClick={this.props.handleBlogClick}">
                                 Blog
                             </a>
                 </div>
@@ -48,20 +48,26 @@
                                 Login
                             </a>
                 </div>
-                <div class="classes.light_mobile_menu_item" data-component-props="style={this.props.facebook_style}">
+                <div class="classes.light_mobile_menu_item">
                         <a class="classes.light_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('fb');}}">
                                 Facebook
                             </a>
                 </div>
-                <div class="classes.light_mobile_menu_item" data-component-props="style={this.props.twiiter_style}">
+                <div class="classes.light_mobile_menu_item">
                         <a class="classes.light_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('twitter');}}">
                                 Twitter
                             </a>
                 </div>
-                <div class="classes.light_mobile_menu_item" data-component-props="style={this.props.youtube_style}">
+                <div class="classes.light_mobile_menu_item">
                         <a class="classes.light_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('youtube');}}">
                                 Youtube
                             </a>
+                </div>
+                <div class="classes.light_mobile_menu_item"  data-component-props="style={this.props.mobile_roster_item}">
+                        <div class="classes.light_mobile_menu_item_box">
+                                Rosters
+                            </div>
+                        <div data-component-value="{this.props.rosterContent}">Blah<div />
                 </div>
                 <div id="rosters" class="classes.light_mobile_menu_item">
                     
