--- a/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
@@ -66,7 +66,12 @@
                         <input data-component-props="value={this.props.twitchUrl} onChange={(e)=>{this.props.handleChange('twitchUrl', e);}}" class="classes.modal_individual_edit_input" placeholder="Twitch Handle not full URL" />
                         <div class="classes.individual_label">YouTube Channel ID</div>
                         <input data-component-props="value={this.props.youtubeChannel} onChange={(e)=>{this.props.handleChange('youtubeChannel', e);}}" class="classes.modal_individual_edit_input" placeholder="Youtube Channel ID not full URL" />
-                        <div data-component-value="{this.props.renderButtons}">BUTTONS</div>
+                        <div data-component-props="onClick={this.props.closeModal}" class="classes.modal_individual_submit_button_container">
+                            <div class="classes.modal_individual_submit_button">Cancel</div>
+                        </div>
+                        <div data-component-props="onClick={this.props.handleSubmit}"  class="classes.modal_individual_submit_button_container">
+                            <div class="classes.modal_individual_submit_button">Submit</div>
+                        </div>
                     </div>
                 </div>        
             </div>                 
