added landing page deploy scripts also felzec the,e mobile changes WIP

--- a/content_builder/src/html/themes/felzec/light/OrganizationBlogMobileComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationBlogMobileComponent.html
@@ -22,9 +22,9 @@
    </head>
    <body>
         <div data-component-name="light_OrganizationBlogMobileComponent" class="classes.felzec_lightBlogContainer">
-            <div class="classes.felzec_blog_container" data-component-props="style={this.props.bg_style}">
+            <div class="classes.felzec_blog_m_container" data-component-props="style={this.props.bg_style}">
             </div>
-            <div class="classes.felzec_blog_filter_container" data-component-props="style={this.props.filter_style}"></div>
+            <div class="classes.felzec_blog_m_filter_container" data-component-props="style={this.props.filter_style}"></div>
             <div class="classes.felzec_blog_mobile_inner_container">
                 <div class="classes.felzec_lightBlogMobileContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_1);}}">
                     <img class="classes.felzec_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
@@ -36,62 +36,6 @@
                         </div>
                         <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
                             <p class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_1}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                        </div>
-                        <div class="classes.obliviot_light_news_decor"></div>
-                    </div>
-                </div>
-                <div class="classes.felzec_lightBlogMobileContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_2);}}">
-                    <img class="classes.felzec_main_news_item_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_test_2.jpg" />    
-                    <div class="classes.obliviot_light_main_news_content_container">
-                        <div>
-                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                <span class="classes.obliviot_light_news_title" data-component-value="{this.props.blog_title_2}">We are live with a very long title</span>
-                            </div>
-                        </div>
-                        <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
-                            <p class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_2}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                        </div>
-                        <div class="classes.obliviot_light_news_decor"></div>
-                    </div>
-                </div>
-                <div class="classes.felzec_lightBlogMobileContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_3);}}">
-                    <img class="classes.felzec_main_news_item_image" data-component-props="src={this.props.blog_media_3}" src="../images/news_test_3.jpg" />    
-                    <div class="classes.obliviot_light_main_news_content_container">
-                        <div>
-                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                <span class="classes.obliviot_light_news_title" data-component-value="{this.props.blog_title_3}">We are live with a very long title</span>
-                            </div>
-                        </div>
-                        <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
-                            <p class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_3}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                        </div>
-                        <div class="classes.obliviot_light_news_decor"></div>
-                    </div>
-                </div>
-                <div class="classes.felzec_lightBlogMobileContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_4);}}">
-                    <img class="classes.felzec_main_news_item_image" data-component-props="src={this.props.blog_media_4}" src="../images/news_test_4.jpg" />    
-                    <div class="classes.obliviot_light_main_news_content_container">
-                        <div>
-                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                <span class="classes.obliviot_light_news_title" data-component-value="{this.props.blog_title_4}">We are live with a very long title</span>
-                            </div>
-                        </div>
-                        <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
-                            <p class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_4}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                        </div>
-                        <div class="classes.obliviot_light_news_decor"></div>
-                    </div>
-                </div>
-                <div class="classes.felzec_lightBlogMobileContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_5);}}">
-                    <img class="classes.felzec_main_news_item_image" data-component-props="src={this.props.blog_media_5}" src="../images/news_test_5.jpg" />    
-                    <div class="classes.obliviot_light_main_news_content_container">
-                        <div>
-                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                <span class="classes.obliviot_light_news_title" data-component-value="{this.props.blog_title_5}">We are live with a very long title</span>
-                            </div>
-                        </div>
-                        <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
-                            <p class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_5}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
                         </div>
                         <div class="classes.obliviot_light_news_decor"></div>
                     </div>
