--- a/content_builder/src/html/themes/felzec/light/OrganizationFooterMobileComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationFooterMobileComponent.html
@@ -46,16 +46,16 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ui two column grid">
-                            <div class="column">
+                        <div>
+                            <div style="width:100%;">
                                 <div class="classes.felzec_footer_title_mobile_left">Support</div>
                                 <div class="classes.felzec_footer_email_left" data-component-props="onClick={this.props.handleSupportClick}" data-component-value="{this.props.footer_support}">
                                     support email
                                 </div>
                             </div>
-                            <div class="column">
-                                <div class="classes.felzec_footer_title_mobile_right">Business enquiries</div>
-                                <div class="classes.felzec_footer_email_right" data-component-props="onClick={this.props.handleBusinessClick}" data-component-value="{this.props.footer_business}">
+                            <div style="width:100%;">
+                                <div class="classes.felzec_footer_title_mobile_left">Business enquiries</div>
+                                <div class="classes.felzec_footer_email_left" data-component-props="onClick={this.props.handleBusinessClick}" data-component-value="{this.props.footer_business}">
                                     support email
                                 </div>
                             </div>
