OR - 848 - Logo goes to homepage

--- a/content_builder/src/html/themes/base/CreateSubDomainComponent.html
+++ b/content_builder/src/html/themes/base/CreateSubDomainComponent.html
@@ -24,7 +24,7 @@
       <div data-component-name="CreateSubDomainComponent" class="classes.signupBGImage">
          <header class="classes.signupHeader">
             <div class="ui container">
-                <a href="#" class="header item">
+                <a href="/" class="header item">
                     <img class="logo" data-component-props="src={this.props.header_image_src}" src="./images/logo-top.png" />
                 </a>
             </div>
