--- a/content_builder/src/html/themes/base/CreateSubDomainDemo.html
+++ b/content_builder/src/html/themes/base/CreateSubDomainDemo.html
@@ -24,7 +24,7 @@
       <div data-component-name="CreateSubDomainDemoComponent" class="classes.signupBGImage">
          <header class="classes.signupHeader">
             <div class="ui container">
-                <a href="#" class="header item">
+                <a href="/" class="header item">
                     <img class="logo" src="./images/logo-top.png" />
                 </a>
             </div>
