--- a/content_builder/src/html/themes/obliviot/dark/OrganizationBlogMobileComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationBlogMobileComponent.html
@@ -22,46 +22,46 @@
    </head>
    <body>
       <div data-component-name="dark_OrganizationBlogMobileComponent">
-            <div class="classes.obliviot_light_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_1);}}">
+            <div class="classes.obliviot_dark_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_1);}}">
                 <img class="classes.obliviot_main_news_item_micro_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_mini_image.jpg" />    
-                <div class="classes.obliviot_light_main_news_content_container">
+                <div class="classes.obliviot_dark_main_news_content_container">
                     <div>
                         <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                            <span class="classes.obliviot_light_news_title" data-component-value="{this.props.blog_title_1}">We are live with a very long title</span>
+                            <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_1}">We are live with a very long title</span>
                         </div>
                     </div>
                     <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
-                        <span class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_1}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
+                        <span class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_1}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
                     </div>
                     <div class="classes.obliviot_light_news_decor"></div>
                 </div>
             </div>
-            <div class="classes.obliviot_light_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_2);}}">
+            <div class="classes.obliviot_dark_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_2);}}">
                 <img class="classes.obliviot_main_news_item_micro_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_mini_image.jpg" />    
-                <div class="classes.obliviot_light_main_news_content_container">
+                <div class="classes.obliviot_dark_main_news_content_container">
                     <div>
                         <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                            <span class="classes.obliviot_light_news_title" data-component-value="{this.props.blog_title_2}">We are live with a very long title</span>
+                            <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_2}">We are live with a very long title</span>
                         </div>
                     </div>
                     <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
-                        <span class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_2}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
+                        <span class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_2}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
                     </div>
-                    <div class="classes.obliviot_light_news_decor"></div>
+                    <div class="classes.obliviot_dark_news_decor"></div>
                 </div>
             </div>
-            <div class="classes.obliviot_light_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_3);}}">
+            <div class="classes.obliviot_dark_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_3);}}">
                 <img class="classes.obliviot_main_news_item_micro_image" data-component-props="src={this.props.blog_media_3}" src="../images/news_mini_image.jpg" />    
-                <div class="classes.obliviot_light_main_news_content_container">
+                <div class="classes.obliviot_dark_main_news_content_container">
                     <div>
                         <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                            <span class="classes.obliviot_light_news_title" data-component-value="{this.props.blog_title_3}">We are live with a very long title</span>
+                            <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title_3}">We are live with a very long title</span>
                         </div>
                     </div>
                     <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
-                        <span class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_3}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
+                        <span class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content_3}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
                     </div>
-                    <div class="classes.obliviot_light_news_decor"></div>
+                    <div class="classes.obliviot_dark_news_decor"></div>
                 </div>
             </div>
         </div>
